@@ -3,7 +3,7 @@
  *
  *   Printer definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
- *   Copyright 1997-2006 by Easy Software Products, all rights reserved.
+ *   Copyright 1997-2007 by Easy Software Products, all rights reserved.
  *
  *   These coded instructions, statements, and computer programs are the
  *   property of Easy Software Products and are protected by Federal
@@ -67,7 +67,8 @@ typedef struct cupsd_printer_s
   char		*port_monitor;		/* Port monitor */
   int		raw;			/* Raw queue? */
   int		remote;			/* Remote queue? */
-  mime_type_t	*filetype;		/* Pseudo-filetype for printer */
+  mime_type_t	*filetype,		/* Pseudo-filetype for printer */
+		*prefiltertype;		/* Pseudo-filetype for pre-filters */
   cups_array_t	*filetypes;		/* Supported file types */
   void		*job;			/* Current job in queue */
   ipp_t		*attrs;			/* Attributes supported by this printer */
